tests/build/fail/widget/property_already_captured_inherited1.stderr
error: property `id` already captured in default fn `new`
 --> $DIR/property_already_captured_inherited1.rs:7:18
  |
7 |     fn new_child(id: WidgetId) -> NilUiNode {
  |                  ^^
